#9010 건수 표시가 필요한지 검토 필요
- 검색 기능이 있고 리스트가 있는 화면에 검색결과(Count)를 확인 할 수 있도록 수정 함.
- ITMS-관리-게시판에 totalCount 오류 수정
- ITSM-관리-권한에 역할과 같게 아이디, 명 위치를 통일 시킴
- html 파일에 스페이스 부분을 ....으로 변경 시킴
- html에서 동적 스크롤 적용을 공통으로 적용 시킴

--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -32,13 +32,13 @@
         <div class="auth-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-column">
+                    <label th:text="#{auth.label.authId}" class="required"></label>
+                    <input id="txtAuthId" name="txtAuthId" type="text" maxlength="100">
+                </div>
+                <div class="edit-row flex-column">
                     <label th:text="#{auth.label.authName}" class="required"></label>
                     <input id="txtAuthName" name="txtAuthName" type="text" maxlength="100">
                     <input id="txtAuthNameOrg" name="txtAuthNameOrg" type="hidden"/>
-                </div>
-                <div class="edit-row flex-column">
-                    <label th:text="#{auth.label.authId}" class="required"></label>
-                    <input id="txtAuthId" name="txtAuthId" type="text" maxlength="100">
                 </div>
                 <div class="edit-row flex-column">
                     <label th:text="#{auth.label.authDesc}"></label>
@@ -433,8 +433,8 @@
 
         function sortMenuList() {
             let menuList = document.getElementById("menuList");
-            var switching = true;
-            var liTag, switchLiTag;
+            let switching = true;
+            let liTag, switchLiTag;
 
             while (switching) {
                 switching = false;
