--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -23,8 +23,9 @@
                        th:placeholder="#{board.label.searchBoardPlaceholder}"/>
                 <input type="text" class="search-date col-3" id="fromDt" name="fromDt"/>
                 <span>~</span>
-                <input type="text" class="search-date col-3" id="searchToDt" name="searchToDt"/>
+                <input type="text" class="search-date col-3 mr-2" id="searchToDt" name="searchToDt"/>
                 <input type="hidden" class="search-date" id="toDt" name="toDt"/>
+                <span id="spanTotalCount" class="txt-num"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-fill" onclick="openBoardAdd()"
@@ -41,8 +42,7 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
         const boardAdminId = /*[[${boardAdminId}]]*/ null;
-        var offsetCount = 0;
-        const offsetSize = 15;
+        let offsetCount = 0;
         window.onload = function() {
             document.getElementById('search').focus();
             if (boardAdminId !== null) {
@@ -88,7 +88,7 @@
                 i18n.makeUserDate(document.getElementById('searchToDt').value, {'days': 1});
             if (isScroll) {
                 if (offsetCount === 0) {
-                    offsetCount = offsetSize;
+                    offsetCount = aliceJs.searchDataCount;
                 }
                 urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
                 restSubmit('get', '/rest/boards/articles?' + urlParam, isScroll);
@@ -114,9 +114,10 @@
                     if (isScroll) {
                         let dataList = JSON.parse(response.responseText);
                         if (dataList.length > 0) {
+                            aliceJs.showTotalCount(dataList[0].totalCount);
                             document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (scrollerEventCheck()) {
-                                offsetCount = offsetCount + offsetSize;
+                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                offsetCount = offsetCount + aliceJs.searchDataCount;
                                 dataList.forEach(function(data) {
                                     getDataTemplate(data);
                                 });
@@ -124,6 +125,7 @@
                         }
                     } else {
                         document.getElementById('boardList').innerHTML = response.responseText;
+                        aliceJs.showTotalCount(document.getElementById('totalCount').value);
                         let boardDtEle = document.querySelectorAll('td[name=boardDt]');
                         for (let i = 0; i < boardDtEle.length; i++) {
                             boardDtEle[i].textContent = i18n.userDateTime(boardDtEle[i].textContent);
@@ -139,7 +141,7 @@
                                 const clientHeight = e.target.clientHeight;
                                 //스크롤이 맨 마지막에 있을 경우
                                 if (scrollHeight - scrollTop === clientHeight) {
-                                    if (scrollerEventCheck()) {
+                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
                                         getBoardList(true);
                                     }
                                 }
@@ -150,16 +152,6 @@
                 showProgressbar: false
             };
             aliceJs.sendXhr(opt);
-        }
-
-        //현재 리스트 개수가 전체 개수보다 작은지 확인 하는 함수
-        function scrollerEventCheck() {
-            let scrollerCheck = false;
-            let totalCount = document.getElementById('totalCount').value;
-            if (offsetCount < totalCount) {
-                scrollerCheck = true;
-            }
-            return scrollerCheck;
         }
 
         //Tr 동적 데이터 만들기
