--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -21,8 +21,9 @@
                        th:placeholder="#{notice.label.searchPlaceholder}"/>
                 <input class="search-date col-3" type="text" id="fromDt" name="fromDt"/>
                 <span>~</span>
-                <input class="search-date col-3" type="text" id="searchToDt" name="searchToDt"/>
+                <input class="search-date col-3 mr-2" type="text" id="searchToDt" name="searchToDt"/>
                 <input class="search-date" type="hidden" id="toDt" name="toDt" readonly="readonly"/>
+                <span id="spanTotalCount" class="txt-num"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-fill" onclick="location.href='/notices/new'"
@@ -38,9 +39,7 @@
 <th:block layout:fragment="pageScript">
     <script th:inline="javascript">
         /*<![CDATA[ */
-        var offsetCount = 0;
-        const offsetSize = 15;
-
+        let offsetCount = 0;
         window.onload = function () {
             // initialization date picker
             document.getElementById('searchValue').focus();
@@ -94,7 +93,7 @@
                 i18n.makeUserDate(document.getElementById('searchToDt').value, {'days': 1});
            if (isScroll) {
                 if (offsetCount === 0) {
-                    offsetCount = offsetSize;
+                   offsetCount = aliceJs.searchDataCount;
                 }
                 urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
                 restSubmit('get', '/rest/notices?' + urlParam, isScroll);
@@ -116,9 +115,10 @@
                     if (isScroll) {
                         let dataList = JSON.parse(response.responseText);
                         if (dataList.length > 0) {
+                            aliceJs.showTotalCount(dataList[0].totalCount);
                             document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (scrollerEventCheck()) {
-                                offsetCount = offsetCount + offsetSize;
+                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                offsetCount = offsetCount + aliceJs.searchDataCount;
                                 dataList.forEach(function(data) {
                                     getDataTemplate(data);
                                 });
@@ -126,6 +126,7 @@
                         }
                     } else {
                         document.getElementById('noticeList').innerHTML = response.responseText;
+                        aliceJs.showTotalCount(document.getElementById('totalCount').value);
                         let createDtList = document.querySelectorAll('td[name=createDt]');
                         let popDtList = document.querySelectorAll('td[name=popDt]');
                         let noticeDtList = document.querySelectorAll('td[name=noticeDt]');
@@ -155,7 +156,7 @@
                                     const clientHeight = e.target.clientHeight;
                                     // 스크롤이 맨 마지막에 있을 경우
                                     if (scrollHeight - scrollTop === clientHeight) {
-                                        if (scrollerEventCheck()) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
                                             getNoticeList(true);
                                         }
                                     }
@@ -167,16 +168,6 @@
             };
             aliceJs.sendXhr(opt);
         }
-        // 현재 리스트 개수가 전체 개수보다 작은지 확인 하는 함수
-        function scrollerEventCheck() {
-            let scrollerCheck = true;
-            let totalCount = document.getElementById('totalCount').value;
-            if (offsetCount < totalCount) {
-                scrollerCheck = true;
-            }
-            return scrollerCheck;
-        }
-
         // Tr 동적 데이터 만들기
         function getDataTemplate(data) {
             let div = document.querySelector('.list-body .os-content');
