--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -22,8 +22,9 @@
                 <input type="text" id="search" name="search" class="search col-5" maxlength="100" th:placeholder="#{download.label.searchPlaceholder}"/>
                 <input type="text" id="fromDt" name="fromDt" class="search-date icon-date col-3"/>
                 <span>~</span>
-                <input class="search-date icon-date col-3" type="text" id="searchToDt" name="searchToDt"/>
+                <input class="search-date icon-date col-3 mr-2" type="text" id="searchToDt" name="searchToDt"/>
                 <input class="search-date icon-date" type="hidden" id="toDt" name="toDt" readonly="readonly"/>
+                <span id="spanTotalCount" class="txt-num"></span>
             </form>
         </div>
     </div>
@@ -36,7 +37,6 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
         let offsetCount = 0;
-        const offsetSize = 15;
 
         window.onload = function () {
             document.getElementById('search').focus();
@@ -81,7 +81,7 @@
                 i18n.makeUserDate(document.getElementById('searchToDt').value, {'days': 1});
             if (isScroll) {
                 if (offsetCount === 0) {
-                    offsetCount = offsetSize;
+                    offsetCount = aliceJs.searchDataCount;
                 }
                 urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
                 restSubmit('get', '/rest/portals/downloads?' + urlParam, isScroll);
@@ -103,9 +103,10 @@
                     if (isScroll) {
                         let dataList = JSON.parse(response.responseText);
                         if (dataList.length > 0) {
+                            aliceJs.showTotalCount(dataList[0].totalCount);
                             document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (scrollerEventCheck()) {
-                                offsetCount = offsetCount + offsetSize;
+                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                offsetCount = offsetCount + aliceJs.searchDataCount;
                                 dataList.forEach(function(data) {
                                     getDataTemplate(data);
                                 });
@@ -113,6 +114,7 @@
                         }
                     } else {
                         document.getElementById('downloadList').innerHTML = response.responseText;
+                        aliceJs.showTotalCount(document.getElementById('totalCount').value);
                         let downloadList = document.querySelectorAll('td[name=createDt]');
                         for (let i = 0; i < downloadList.length; i++) {
                             downloadList[i].textContent = i18n.userDateTime(downloadList[i].textContent);
@@ -128,7 +130,7 @@
                                 const clientHeight = e.target.clientHeight;
                                 // 스크롤이 맨 마지막에 있을 경우
                                 if (scrollHeight - scrollTop === clientHeight) {
-                                    if (scrollerEventCheck()) {
+                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
                                         getDownloadList(true);
                                     }
                                 }
@@ -139,17 +141,6 @@
             };
             aliceJs.sendXhr(opt);
         }
-
-        // 현재 리스트 개수가 전체 개수보다 작은지 확인 하는 함수
-        function scrollerEventCheck() {
-            let scrollerCheck = false;
-            let totalCount = document.getElementById('totalCount').value;
-            if (offsetCount < totalCount) {
-                scrollerCheck = true;
-            }
-            return scrollerCheck;
-        }
-
         // Tr 동적 데이터 만들기
         function getDataTemplate(data) {
             let div = document.querySelector('.list-body .os-content');
