--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -17,8 +17,9 @@
         <div class="header-search flex-row">
             <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''process.update'')')}"/>
             <form id="searchFrm">
-                <input type="text" id="search" name="search" class="search col-5"  maxlength="100"
+                <input type="text" id="search" name="search" class="search col-5 mr-2"  maxlength="100"
                        th:placeholder="#{process.label.searchPlaceholder}"/>
+                <span id="spanTotalCount" class="txt-num"></span>
             </form>
             <div class="ml-auto">
                 <button type="button" class="default-line" onclick="openProcessImport();"
@@ -394,6 +395,7 @@
                     if (isScroll) {
                         let dataList = JSON.parse(response.responseText);
                         if (dataList.length > 0) {
+                            aliceJs.showTotalCount(dataList[0].totalCount);
                             document.getElementById('totalCount').value = dataList[0].totalCount;
                             if (aliceJs.isEnableScrollEvent(offsetCount)) {
                                 offsetCount = offsetCount + aliceJs.searchDataCount;
@@ -405,6 +407,7 @@
 
                     } else {
                         document.getElementById('processList').innerHTML = response.responseText;
+                        aliceJs.showTotalCount(document.getElementById('totalCount').value);
                         let processDtEle = document.querySelectorAll('td[name=createDt]');
                         for (let i = 0; i < processDtEle.length; i++) {
                             processDtEle[i].textContent = i18n.userDateTime(processDtEle[i].textContent);
