#9022 [문서 양식] 미리보기, 변경 팝업에 이미지 태그에 alt 속성 부여

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -79,7 +79,7 @@ input, button, select, optgroup, textarea {
   margin: 0;
 }
 
-/* _alignments.scss
+/* _alignments.scss 
  *
  * 파일 경로 : template/_alignments.scss
  * @description 정렬, 배치 관련 디자인
@@ -207,7 +207,7 @@ input, button, select, optgroup, textarea {
   flex: 1 1 auto;
 }
 
-/* _columns.scss
+/* _columns.scss 
  *
  * 파일 경로 : template/_columns.scss
  * @description HTML element 너비 관련 디자인
@@ -374,7 +374,7 @@ input, button, select, optgroup, textarea {
   margin-right: auto;
 }
 
-/* _common.scss
+/* _common.scss 
  *
  * 파일 경로 : template/_common.scss
  * @description 공통으로 사용되는 디자인
@@ -497,7 +497,7 @@ input, button, select, optgroup, textarea {
 @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 700;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.otf) format('opentype');}
 @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 900;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');}
 */
-/* _columns.scss
+/* _columns.scss 
  *
  * 파일 경로 : template/_columns.scss
  * @description HTML element 너비 관련 디자인
@@ -1205,7 +1205,7 @@ input, button, select, optgroup, textarea {
   animation-iteration-count: 1;
 }
 
-/* _elements.scss
+/* _elements.scss 
  *
  * 파일 경로 : template/_elements.scss
  * @description HTML element 디자인
@@ -1909,7 +1909,7 @@ table tbody tr:hover {
   background-color: rgba(230, 232, 235, 0.6);
 }
 
-/* _buttons.scss
+/* _buttons.scss 
  *
  * 파일 경로 : template/_buttons.scss
  * @description 버튼 디자인
@@ -2570,7 +2570,7 @@ button.ghost-line:disabled .icon {
   background-color: #0098FF;
 }
 
-/* _alerts.scss
+/* _alerts.scss 
  *
  * 파일 경로 : template/_alerts.scss
  * @description 알림 모달
@@ -2727,7 +2727,7 @@ button.ghost-line:disabled .icon {
   }
 }
 
-/* _scrollbars.scss
+/* _scrollbars.scss 
  *
  * 파일 경로 : template/_scrollbars.scss
  * @description 스크롤바 디자인
@@ -3040,7 +3040,7 @@ button.ghost-line:disabled .icon {
   background-color: #CCCED1;
 }
 
-/* _file-uploader.scss
+/* _file-uploader.scss 
  *
  * 파일 경로 : template/_file-uploader.scss
  * @description 파일 업로드 관련 디자인
@@ -3547,7 +3547,7 @@ button.ghost-line:disabled .icon {
   display: none;
 }
 
-/* _avatar.scss
+/* _avatar.scss 
  *
  * 파일 경로 : template/_avatar.scss
  * @description 아바타 관련 디자인
@@ -3759,7 +3759,7 @@ button.ghost-line:disabled .icon {
   font-size: 0.8125rem;
 }
 
-/* _date-picker.scss
+/* _date-picker.scss 
  *
  * 파일 경로 : template/_date-picker.scss
  * @description Date/Time picker 관련 디자인
@@ -4033,7 +4033,7 @@ button.ghost-line:disabled .icon {
   margin: 1.25rem 1.25rem 1.25rem 0;
 }
 
-/* _tooltip.scss
+/* _tooltip.scss 
  *
  * 파일 경로 : template/_tooltip.scss
  * @description 툴팁 디자인
@@ -4129,6 +4129,34 @@ button.ghost-line:disabled .icon {
 
 .help-tooltip:hover .help-tooltip-icon {
   background: #0098FF;
+}
+
+.header-tooltip .tooltip-contents {
+  min-width: 3.75rem;
+  visibility: hidden;
+  background-color: #33ADFF;
+  color: #ffffff;
+  text-align: center;
+  font-size: 1.125rem;
+  border-radius: 0.1875rem;
+  padding: 0.6875rem 0.875rem;
+  margin: 1.3125rem 0 0 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.header-tooltip .tooltip-contents span {
+  color: #ffffff;
+  font-weight: 500;
+}
+
+.header-tooltip:hover .tooltip-contents {
+  visibility: visible;
+  animation-delay: 0s;
+  animation-duration: 0.3s;
+  animation-name: fadeIn;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
 }
 
 /*
