--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -407,6 +407,12 @@ $tooltip-contents-border:                    0.125rem; // 2px
 $tooltip-contents-padding:                   1.0625rem 0.9375rem 0.9375rem 0.9375rem; // 17px 15px 15px 15px
 $tooltip-contents-box-shadow:                0 0 0.3125rem 0 rgba(30, 47, 63, 0.2); // 5px
 
+$tooltip-header-contents-size:               1.125rem; // 18px
+$tooltip-header-contents-width:              3.75rem; // 60px
+$tooltip-header-contents-border:             0.1875rem; // 3px
+$tooltip-header-contents-padding:            0.6875rem 0.875rem; // 11px 14px 
+$tooltip-header-contents-margin:             1.3125rem 0 0 0; // 21px
+
 /////////////////////////////// designed select ///////////////////////////////
 $select-bg-color: rgba(0, 152, 255, 0.08);
 
