--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -340,8 +340,7 @@
                     let result = response.responseText;
                     document.getElementById('authList').innerHTML = result;
                     let authList = document.querySelectorAll('td[name=authName]');
-                    document.getElementById('totalCount').textContent = i18n.msg("common.label.count", authList.length);
-
+                    aliceJs.showTotalCount(authList.length, 'totalCount');
                     if (result.indexOf('no-data-found') === -1) {
                         for (let i = 0; i < authList.length; i++) {
                             authList[i].style.cursor = 'pointer';
