--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -76,6 +76,9 @@ $img-border:                                  0.0625rem solid $line-gray;
 // 커스텀 코드 컴포넌트
 $custom-code-btn-font-color:                  $dark-gray;
 
+// Dynamic Row Table 컴포넌트
+$dr-table-bg-color:                           $white;
+
 ////////////////////////// context menu /////////////////////////
 $context-menu-width:                          11.25rem; // 180px
 $context-menu-height:                         14.06rem; // 225px
