--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -664,6 +664,14 @@ input, button, select, optgroup, textarea {
   float: right;
 }
 
+.form-container .form-properties .property-group[id="field"] {
+  position: relative;
+}
+
+.form-container .form-properties .property-group[id="field"] .property-group-field {
+  float: right;
+}
+
 .form-container .form-properties .property-group .property-field {
   position: relative;
   margin: 1.25rem 0;
@@ -805,6 +813,22 @@ input, button, select, optgroup, textarea {
   border-color: transparent;
   padding: 0;
   text-align: center;
+}
+
+.form-container .form-properties .property-group .property-field-block {
+  margin-bottom: 0.625rem;
+}
+
+.form-container .form-properties .property-group .property-field-block-header {
+  padding: 0.625rem;
+  background-color: #F7F8F9;
+  border: 0.0625rem solid #EBEBEB;
+  border-bottom: none;
+}
+
+.form-container .form-properties .property-group .property-field-block-content {
+  padding: 0 0.625rem;
+  border: 0.0625rem solid #EBEBEB;
 }
 
 .form-container .form-properties .property-group .error-msg {
@@ -4533,6 +4557,30 @@ body.modal-active {
 
 .component .field-group .field-content.custom-code > button:focus, .component .field-group .field-content.custom-code > button:hover, .component .field-group .field-content.custom-code > button:active {
   z-index: 1;
+}
+
+.component .field-group .field-content .dr-table {
+  width: 100%;
+  background-color: #ffffff;
+}
+
+.component .field-group .field-content .dr-table th, .component .field-group .field-content .dr-table td {
+  padding: 0.625rem;
+}
+
+.component .field-group .field-content .dr-table input[type=text] {
+  width: 100%;
+}
+
+.component .field-group .field-content .dr-table .on {
+  border-color: #0098FF !important;
+}
+
+.component .btn-dr-table-row-add {
+  padding: 0;
+  position: absolute;
+  top: 1.25rem;
+  right: 0.3125rem;
 }
 
 .component[data-type="editbox"] {
