--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -163,8 +163,27 @@
           }
         }
       }
+      // Dynamic Row Table 컴포넌트
+      .dr-table {
+        width: 100%;
+        background-color: $dr-table-bg-color;
+        th, td { padding: $element-indent; }
+
+        input[type=text] { width: 100%; }
+
+        .on { border-color: $point-blue !important; }
+      }
     }
   }
+
+// Dynamic Row Table 컴포넌트 - Row 추가 버튼
+.btn-dr-table-row-add {
+  padding: 0;
+  position: absolute;
+  top: 1.25rem; // 20px
+  right: 0.3125rem; // 5px
+}
+
   // editbox 컴포넌트
   &[data-type="editbox"] {
     padding: 0 2.125rem 0 0.8125rem; // 0px 34.8px 0px 13px
