--- a/src/main/resources/public/template/form/formDesignerEdit.html
+++ b/src/main/resources/public/template/form/formDesignerEdit.html
@@ -141,6 +141,12 @@
                         <label th:text="#{form.component.custom-code}"></label>
                     </div>
                 </li>
+                <li class="menu-item dynamic-row-table" data-action="dynamic-row-table">
+                    <div>
+                        <img class="load-svg" th:src="@{/assets/media/icons/form/context-menu/icon-dynamic-row-table.svg}"/>
+                        <label th:text="#{form.component.dynamic-row-table}"></label>
+                    </div>
+                </li>
             </ul>
         </div>
     </form>
@@ -188,6 +194,9 @@
         <div class="property-group" id="display">
             <h5><label class="property-group-name" th:text="#{form.properties.display}"></label></h5>
         </div>
+        <div class="property-group" id="header">
+            <h5><label class="property-group-name" th:text="#{form.properties.header}"></label></h5>
+        </div>
         <div class="property-group" id="option">
             <h5>
                 <label class="property-group-name" th:text="#{form.properties.option}"></label>
@@ -203,6 +212,15 @@
                     <col width="40%">
                 </colgroup>
             </table>
+        </div>
+        <div class="property-group" id="field">
+            <h5>
+                <label class="property-group-name" th:text="#{form.properties.field}"></label>
+                <div class="property-group-field">
+                    <button type="button" class="ghost-line btn-option" id="field-delete"><span class="icon icon-minus"></span></button>
+                    <button type="button" class="ghost-line btn-option" id="field-add"><span class="icon icon-plus"></span></button>
+                </div>
+            </h5>
         </div>
         <div class="property-group" id="validate">
             <h5><label class="property-group-name" th:text="#{form.properties.validate}"></label></h5>
