#8258 컴포넌트 추가 - Dynamic Row Table 컴포넌트 : 폼 디자이너 편집 화면 완료

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -4602,7 +4602,7 @@ body.modal-active {
 }
 
 .component .field-group .field-content .dr-table .on {
-  border-color: #0098FF !important;
+  box-shadow: 0 0 0 0.125rem #0098FF inset;
 }
 
 .component .btn-dr-table-row-add {
