--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -171,7 +171,9 @@
 
         input[type=text] { width: 100%; }
 
-        .on { border-color: $point-blue !important; }
+        .on {
+          box-shadow: 0 0 0 0.125rem $point-blue inset; // 2px
+        }
       }
     }
   }
