#9587 문서함 > 관련문서 추가 > 중복체크 기능 추가 1. 관련문서 조회 카운트가 2배로 나오는 현상 수정 2. 이미 관련문서로 등록된 문서 식별 및 미선택 되도록 수정

--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -45,8 +45,8 @@
         function getInstanceList(search, showProgressbar) {
             restSubmit('get', '/tokens/view-pop/documents?searchValue=' + search.trim() + '&tokenId=' + '[[${tokenId}]]', function(result) {
                 document.getElementById('instanceList').innerHTML = result;
+                aliceJs.showTotalCount(document.querySelectorAll('.instance-list').length);
                 let instanceDtEle = document.querySelectorAll('td[name=instanceDt]');
-                aliceJs.showTotalCount(instanceDtEle.length);
                 for (let i = 0; i < instanceDtEle.length; i++) {
                     if (instanceDtEle[i].textContent !== '') {
                         instanceDtEle[i].textContent = i18n.userDateTime(instanceDtEle[i].textContent);
