--- a/src/main/resources/public/template/token/tokenInstanceList.html
+++ b/src/main/resources/public/template/token/tokenInstanceList.html
@@ -28,11 +28,12 @@
             th:if="${#arrays.isEmpty(instanceList)}">
             <td style="width:100%" th:text="#{common.msg.noData}"></td>
         </tr>
-        <tr class="instance-list"th:each="instance, index : ${instanceList}">
+        <tr class="instance-list" th:each="instance, index : ${instanceList}">
             <td style="width:5%;" class="align-center">
                 <label class="checkbox" th:for="${index.index}" tabindex="0">
                     <input type="checkbox" name="chk" th:id="${index.index}"
-                           th:value="${instance.instanceId}">
+                           th:value="${instance.instanceId}" th:checked="${instance.related == null || instance.related == true}"
+                           th:disabled="${instance.related == null || instance.related == true}">
                     <span></span>
                 </label>
             <td style="width:20%;" class="align-left" th:text="${instance.documentNo}"></td>
